// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Price Extra Prop 1`] = `
<div
  className="rs"
>
  <span
    className="css-1rn2cu4-Price"
    data-price-currency="EUR"
    data-price-value={10.9}
    data-sample="yes"
  >
    10
    <span
      className="css-8pvupu-Price"
    >
      , 
      90
       
      €
    </span>
  </span>
</div>
`;

exports[`Storyshots Price No Color 1`] = `
<div
  className="rs"
>
  <span
    className="css-fyxyfm-Price"
    data-price-currency="EUR"
    data-price-value={10.9}
  >
    10
    <span
      className="css-tvrdin-Price"
    >
      , 
      90
       
      €
    </span>
  </span>
</div>
`;

exports[`Storyshots Price Primary 1`] = `
<div
  className="rs"
>
  <span
    className="css-1rn2cu4-Price"
    data-price-currency="EUR"
    data-price-value={10.9}
  >
    10
    <span
      className="css-8pvupu-Price"
    >
      , 
      90
       
      €
    </span>
  </span>
</div>
`;

exports[`Storyshots Price Prix En Franc Suisse 1`] = `
<div
  className="rs"
>
  <span
    className="css-1rn2cu4-Price"
    data-price-currency="CHF"
    data-price-value={10.9}
  >
    10
    <span
      className="css-8pvupu-Price"
    >
      , 
      90
       
      CHF
    </span>
  </span>
</div>
`;

exports[`Storyshots Price Prix En Pounds 1`] = `
<div
  className="rs"
>
  <span
    className="css-1rn2cu4-Price"
    data-price-currency="GBP"
    data-price-value={10.9}
  >
    10
    <span
      className="css-8pvupu-Price"
    >
      , 
      90
       
      £
    </span>
  </span>
</div>
`;
